Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/qute-reference.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-04-12 02:33+0000\n"
+"POT-Creation-Date: 2022-04-12 07:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -78,7 +78,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Qute.fmt(\"<html>{header}</html>\").contentType(\"text/html\").data(\"header\", \"<h1>My header</h1>\").render(); <3>\n"
-"// <html><h1>Header</h1></html> <4>\n"
+"// <html>&lt;h1&gt;Header&lt;/h1&gt;</html> <4>\n"
 msgstr ""
 
 #. type: delimited block -
