--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2022-02-04 01:50+0900\n"
+"POT-Creation-Date: 2022-04-12 07:13+0000\n"
 "PO-Revision-Date: 2022-02-03 10:51+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -82,7 +82,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Qute.fmt(\"<html>{header}</html>\").contentType(\"text/html\").data(\"header\", \"<h1>My header</h1>\").render(); <3>\n"
-"// <html><h1>Header</h1></html> <4>\n"
+"// <html>&lt;h1&gt;Header&lt;/h1&gt;</html> <4>\n"
 msgstr ""
 
 #. type: delimited block -
