--- a/l10n/po/ja_JP/_includes/homepage-imperative_and_reactive-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-imperative_and_reactive-band.html.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-03 01:46+0000\n"
+"POT-Creation-Date: 2022-04-12 07:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -58,11 +58,11 @@ msgstr "リアクティブ"
 #: upstream/_includes/homepage-imperative_and_reactive-band.html:28
 #, fuzzy, no-wrap
 msgid ""
-"<code>@Channel(\"kafka\") Multi<String> events;\n"
+"<code>@Channel(\"kafka\") Multi&lt;String&gt; events;\n"
 "\n"
 "@GET\n"
 "@Produces(MediaType.SERVER_SENT_EVENTS)\n"
-"public Multi<String> events() {\n"
+"public Multi&lt;String&gt; events() {\n"
 "    return events;\n"
 "}</code>"
 msgstr "<code>@Channel(\"kafka\") Multi<String> events;"
