Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache.adoc.po
@@ -141,12 +141,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:67
 msgid "To get started:"
-msgstr ""
+msgstr "始めるには"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:69
 msgid "add your settings in `{config-file}`"
-msgstr ""
+msgstr "`{config-file}` に設定を追加します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:70
@@ -231,7 +231,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:106
 msgid "Then add the relevant configuration properties in `{config-file}`."
-msgstr ""
+msgstr "次に、関連する構成プロパティを `{config-file}` に追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:114
@@ -311,7 +311,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:162
 msgid "And thanks to our field access rewrite, when your users read `person.name` they will actually call your `getName()` accessor, and similarly for field writes and the setter.  This allows for proper encapsulation at runtime as all fields calls will be replaced by the corresponding getter/setter calls."
-msgstr ""
+msgstr "また、当社のフィールドアクセスリライトのおかげで、ユーザーが `person.name` を読むときには、実際に `getName()` アクセサが呼び出されます。これはフィールドの書き込みやセッターについても同様です。これにより、すべてのフィールドの呼び出しが、対応するゲッター/セッターの呼び出しに置き換えられるため、実行時に適切なカプセル化が可能になります。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:163
@@ -472,18 +472,18 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:236
 #, no-wrap
 msgid "Adding entity methods"
-msgstr ""
+msgstr "エンティティメソッドの追加"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:241
 msgid "Add custom queries on your entities inside the entities themselves.  That way, you and your co-workers can find them easily, and queries are co-located with the object they operate on.  Adding them as static methods in your entity class is the Panache Active Record way."
-msgstr ""
+msgstr "エンティティに対するカスタムクエリを、エンティティ自体の中に追加できます。そうすることで、自分や同僚が簡単に見つけることができ、クエリは操作するオブジェクトと一緒に配置されます。エンティティクラスにスタティックメソッドとして追加するのがPanache Active Recordのやり方です。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:264
 #, no-wrap
 msgid "Solution 2: using the repository pattern"
-msgstr ""
+msgstr "解決策2：リポジトリパターンの使用"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:270
@@ -765,7 +765,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:429
 msgid "Then, you can create the following resource to create/read/update/delete your Person entity:"
-msgstr ""
+msgstr "そして、次のようなリソースを作成することで、Personエンティティの作成/読み取り/更新/削除が可能になります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:436
@@ -888,13 +888,13 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:498
 #, no-wrap
 msgid "Advanced Query"
-msgstr ""
+msgstr "アドバンスドクエリー"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:500
 #, no-wrap
 msgid "Paging"
-msgstr ""
+msgstr "ページング"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:504
@@ -972,18 +972,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:536
 msgid "The `PanacheQuery` type has many other methods to deal with paging and returning streams."
-msgstr ""
+msgstr "`PanacheQuery` 型には、ページングやリターンストリームを処理するための他の多くのメソッドがあります。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:537
 #, no-wrap
 msgid "Using a range instead of pages"
-msgstr ""
+msgstr "ページではなく範囲を使用する"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:540
 msgid "`PanacheQuery` also allows range-based queries."
-msgstr ""
+msgstr "`PanacheQuery` では、範囲ベースのクエリも可能です。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:548
@@ -1012,13 +1012,13 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:560
 msgid "You cannot mix ranges and pages: if you use a range, all methods that depend on having a current page will throw an `UnsupportedOperationException`; you can switch back to paging using `page(Page)` or `page(int, int)`."
-msgstr ""
+msgstr "範囲とページを混在させることはできません。範囲を使用した場合、現在のページを持っていることに依存するすべてのメソッドは `UnsupportedOperationException` をスローします。`page(Page)` もしくは `page(int, int)` を使用してページングに切り換えられます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:562
 #, no-wrap
 msgid "Sorting"
-msgstr ""
+msgstr "ソート"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:565
@@ -1053,13 +1053,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:582
 msgid "The `Sort` class has plenty of methods for adding columns and specifying sort direction."
-msgstr ""
+msgstr "`Sort` クラスには、列を追加したり、ソート方向を指定したりするメソッドが豊富に用意されています。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:583
 #, no-wrap
 msgid "Simplified queries"
-msgstr ""
+msgstr "シンプルなクエリ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:587
@@ -1235,7 +1235,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:668
 msgid "Or by name using a `Map`:"
-msgstr ""
+msgstr "または、 `Map` を使った名前で、"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:675
@@ -1250,7 +1250,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:678
 msgid "Or using the convenience class `Parameters` either as is or to build a `Map`:"
-msgstr ""
+msgstr "または便利なクラスである `Parameters` をそのまま使用するか、 `Map` を構築する。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:684
@@ -1273,18 +1273,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:691
 msgid "Every query operation accepts passing parameters by index (`Object...`), or by name (`Map<String,Object>` or `Parameters`)."
-msgstr ""
+msgstr "すべてのクエリ操作は、インデックス( `Object…​`)または名前( `Map<String,Object>` または `Parameters`)でパラメータを渡すことができます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:692
 #, no-wrap
 msgid "Query projection"
-msgstr ""
+msgstr "クエリの投影"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:695
 msgid "Query projection can be done with the `project(Class)` method on the `PanacheQuery` object that is returned by the `find()` methods."
-msgstr ""
+msgstr "クエリの投影は、 `find()` のメソッドが返す `PanacheQuery` オブジェクトに対して `project(Class)` のメソッドで行うことができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:697
@@ -1546,7 +1546,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:841
 #, no-wrap
 msgid "Custom IDs"
-msgstr ""
+msgstr "カスタムID"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:845
@@ -1623,7 +1623,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:887
 msgid "Add this dependency to your `pom.xml`:"
-msgstr ""
+msgstr "この依存関係を `pom.xml` に追加してください。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:895
@@ -1640,7 +1640,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:899
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:1038
 msgid "Given this simple entity:"
-msgstr ""
+msgstr "このシンプルなエンティティがある場合に"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:904
@@ -1670,7 +1670,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:914
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:1065
 msgid "You can write your mocking test like this:"
-msgstr ""
+msgstr "モッキングテストはこのように書くことができます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:919
@@ -1893,7 +1893,7 @@ msgstr "リポジトリパターンの使用"
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:1027
 msgid "If you are using the repository pattern you can use Mockito directly, using the `quarkus-junit5-mockito` module, which makes mocking beans much easier:"
-msgstr ""
+msgstr "リポジトリパターンを使用している場合は、 `quarkus-junit5-mockito` モジュールを使用して、Mockito を直接使用することができます。これにより、ビーンのモッキングが非常に簡単になります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:1035
@@ -1934,7 +1934,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:1053
 msgid "And this repository:"
-msgstr ""
+msgstr "そしてこのリポジトリ。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:1062
@@ -2092,7 +2092,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:1142
 msgid "With the active record pattern: put all your entity logic in static methods in your entity class and don't create DAOs.  Your entity superclass comes with lots of super useful static methods, and you can add your own in your entity class.  Users can just start using your entity `Person` by typing `Person.` and getting completion for all the operations in a single place."
-msgstr ""
+msgstr "アクティブレコードパターンの使用: アクティブレコードパターンでは、すべてのエンティティロジックをエンティティクラスのスタティックメソッドに置き、DAOを作りません。エンティティスーパークラスには、非常に便利なスタティックメソッドがたくさん用意されていますし、エンティティクラスに独自のメソッドを追加することもできます。 `Person` ユーザーは、 `Person` と入力するだけで、すべての操作を一か所で完了させることができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:1145
