--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive-panache.adoc.po
@@ -130,12 +130,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:63
 msgid "To get started:"
-msgstr ""
+msgstr "始めるには"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:65
 msgid "add your settings in `{config-file}`"
-msgstr ""
+msgstr "`{config-file}` に設定を追加します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:66
@@ -229,7 +229,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:104
 msgid "Then add the relevant configuration properties in `{config-file}`."
-msgstr ""
+msgstr "次に、関連する構成プロパティを `{config-file}` に追加します。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:112
@@ -309,7 +309,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:160
 msgid "And thanks to our field access rewrite, when your users read `person.name` they will actually call your `getName()` accessor, and similarly for field writes and the setter.  This allows for proper encapsulation at runtime as all fields calls will be replaced by the corresponding getter/setter calls."
-msgstr ""
+msgstr "また、当社のフィールドアクセスリライトのおかげで、ユーザーが `person.name` を読むときには、実際に `getName()` アクセサが呼び出されます。これはフィールドの書き込みやセッターについても同様です。これにより、すべてのフィールドの呼び出しが、対応するゲッター/セッターの呼び出しに置き換えられるため、実行時に適切なカプセル化が可能になります。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:161
@@ -438,18 +438,18 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:213
 #, no-wrap
 msgid "Adding entity methods"
-msgstr ""
+msgstr "エンティティメソッドの追加"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:218
 msgid "Add custom queries on your entities inside the entities themselves.  That way, you and your co-workers can find them easily, and queries are co-located with the object they operate on.  Adding them as static methods in your entity class is the Panache Active Record way."
-msgstr ""
+msgstr "エンティティに対するカスタムクエリを、エンティティ自体の中に追加できます。そうすることで、自分や同僚が簡単に見つけることができ、クエリは操作するオブジェクトと一緒に配置されます。エンティティクラスにスタティックメソッドとして追加するのがPanache Active Recordのやり方です。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:241
 #, no-wrap
 msgid "Solution 2: using the repository pattern"
-msgstr ""
+msgstr "解決策2：リポジトリパターンの使用"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:247
@@ -696,13 +696,13 @@ msgstr "残りのドキュメントでは、アクティブレコードパター
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:383
 #, no-wrap
 msgid "Advanced Query"
-msgstr ""
+msgstr "アドバンスドクエリー"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:385
 #, no-wrap
 msgid "Paging"
-msgstr ""
+msgstr "ページング"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:389
@@ -780,18 +780,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:421
 msgid "The `PanacheQuery` type has many other methods to deal with paging and returning streams."
-msgstr ""
+msgstr "`PanacheQuery` 型には、ページングやリターンストリームを処理するための他の多くのメソッドがあります。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:422
 #, no-wrap
 msgid "Using a range instead of pages"
-msgstr ""
+msgstr "ページではなく範囲を使用する"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:425
 msgid "`PanacheQuery` also allows range-based queries."
-msgstr ""
+msgstr "`PanacheQuery` では、範囲ベースのクエリも可能です。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:433
@@ -820,13 +820,13 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:445
 msgid "You cannot mix ranges and pages: if you use a range, all methods that depend on having a current page will throw an `UnsupportedOperationException`; you can switch back to paging using `page(Page)` or `page(int, int)`."
-msgstr ""
+msgstr "範囲とページを混在させることはできません。範囲を使用した場合、現在のページを持っていることに依存するすべてのメソッドは `UnsupportedOperationException` をスローします。`page(Page)` もしくは `page(int, int)` を使用してページングに切り換えられます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:447
 #, no-wrap
 msgid "Sorting"
-msgstr ""
+msgstr "ソート"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:450
@@ -861,13 +861,13 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:467
 msgid "The `Sort` class has plenty of methods for adding columns and specifying sort direction."
-msgstr ""
+msgstr "`Sort` クラスには、列を追加したり、ソート方向を指定したりするメソッドが豊富に用意されています。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:468
 #, no-wrap
 msgid "Simplified queries"
-msgstr ""
+msgstr "シンプルなクエリ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:472
@@ -1037,7 +1037,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:552
 msgid "Or by name using a `Map`:"
-msgstr ""
+msgstr "または、 `Map` を使った名前で、"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:559
@@ -1052,7 +1052,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:562
 msgid "Or using the convenience class `Parameters` either as is or to build a `Map`:"
-msgstr ""
+msgstr "または便利なクラスである `Parameters` をそのまま使用するか、 `Map` を構築する。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:568
@@ -1075,18 +1075,18 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:575
 msgid "Every query operation accepts passing parameters by index (`Object...`), or by name (`Map<String,Object>` or `Parameters`)."
-msgstr ""
+msgstr "すべてのクエリ操作は、インデックス( `Object…​`)または名前( `Map<String,Object>` または `Parameters`)でパラメータを渡すことができます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:576
 #, no-wrap
 msgid "Query projection"
-msgstr ""
+msgstr "クエリの投影"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:579
 msgid "Query projection can be done with the `project(Class)` method on the `PanacheQuery` object that is returned by the `find()` methods."
-msgstr ""
+msgstr "クエリの投影は、 `find()` のメソッドが返す `PanacheQuery` オブジェクトに対して `project(Class)` のメソッドで行うことができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:581
@@ -1347,7 +1347,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:734
 #, no-wrap
 msgid "Custom IDs"
-msgstr ""
+msgstr "カスタムID"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:738
@@ -1447,7 +1447,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:798
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:914
 msgid "Given this simple entity:"
-msgstr ""
+msgstr "このシンプルなエンティティがある場合に"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:803
@@ -1477,7 +1477,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:813
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:941
 msgid "You can write your mocking test like this:"
-msgstr ""
+msgstr "モッキングテストはこのように書くことができます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:818
@@ -1645,7 +1645,7 @@ msgstr "リポジトリパターンの使用"
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:896
 msgid "If you are using the repository pattern you can use Mockito directly, using the `quarkus-junit5-mockito` module, which makes mocking beans much easier:"
-msgstr ""
+msgstr "リポジトリパターンを使用している場合は、 `quarkus-junit5-mockito` モジュールを使用して、Mockito を直接使用することができます。これにより、ビーンのモッキングが非常に簡単になります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:905
@@ -1692,7 +1692,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:929
 msgid "And this repository:"
-msgstr ""
+msgstr "そしてこのリポジトリ。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:938
@@ -1830,7 +1830,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:1011
 msgid "Traditional EE patterns advise to split entity definition (the model) from the operations you can do on them (DAOs, Repositories), but really that requires an unnatural split between the state and its operations even though we would never do something like that for regular objects in the Object Oriented architecture, where state and methods are in the same class. Moreover, this requires two classes per entity, and requires injection of the DAO or Repository where you need to do entity operations, which breaks your edit flow and requires you to get out of the code you're writing to set up an injection point before coming back to use it."
-msgstr ""
+msgstr "従来のEEパターンでは、エンティティの定義（モデル）とそれに対する操作（DAOやリポジトリ）を分けることが推奨されていましたが、実際には、状態とその操作を不自然な形で分ける必要があります。状態とその操作が1つのクラスに存在するオブジェクト指向アーキテクチャでは通常そのようなことは行いません。さらに、エンティティごとに2つのクラスを必要とし、エンティティの操作を行う必要があるDAOやリポジトリをインジェクションする必要があります。これにより、編集フローが壊れ、インジェクションポイントを設定するために書いているコードから抜け出してから、それを使用するために戻ってこなければなりません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:1013
@@ -1855,12 +1855,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:1023
 msgid "Use public fields. Get rid of dumb getter and setters. Under the hood, we will generate all getters and setters that are missing, and rewrite every access to these fields to use the accessor methods. This way you can still write _useful_ accessors when you need them, which will be used even though your entity users still use field accesses."
-msgstr ""
+msgstr "パブリックフィールドを使ってください。無駄なゲッターとセッターを無くせます。フードの下では、不足しているすべてのゲッターとセッターを生成し、これらのフィールドへのすべてのアクセスを、アクセサ・メソッドを使用するように書き換えます。この方法では、必要なときに _便利な_ アクセサを書くことができ、エンティティ・ユーザーがフィールド・アクセスを使用していても、それが使用されます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:1026
 msgid "With the active record pattern: put all your entity logic in static methods in your entity class and don't create DAOs.  Your entity superclass comes with lots of super useful static methods, and you can add your own in your entity class.  Users can just start using your entity `Person` by typing `Person.` and getting completion for all the operations in a single place."
-msgstr ""
+msgstr "アクティブレコードパターンの使用: アクティブレコードパターンでは、すべてのエンティティロジックをエンティティクラスのスタティックメソッドに置き、DAOを作りません。エンティティスーパークラスには、非常に便利なスタティックメソッドがたくさん用意されていますし、エンティティクラスに独自のメソッドを追加することもできます。 `Person` ユーザーは、 `Person` と入力するだけで、すべての操作を一か所で完了させることができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:1029
