Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:16
@@ -78,7 +78,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:404
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:25
@@ -173,7 +173,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:377
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:88
@@ -199,7 +199,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:395
 #, no-wrap
 msgid "long"
-msgstr ""
+msgstr "long"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config.adoc:97
