--- a/l10n/po/ja_JP/_guides/dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-services.adoc.po
@@ -203,7 +203,7 @@ msgstr "Infinispan Dev Serviceは、アプリケーションに `quarkus-infinis
 #: upstream/_guides/dev-services.adoc:121
 #, no-wrap
 msgid "Elasticsearch"
-msgstr ""
+msgstr "Elasticsearch"
 
 #. type: Plain text
 #: upstream/_guides/dev-services.adoc:126
