--- a/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
@@ -125,7 +125,7 @@ msgstr "`pom.xml`  ファイルには、2つのテスト依存関係があるは
 #: upstream/_guides/getting-started-testing.adoc:58
 #, no-wrap
 msgid "Maven"
-msgstr ""
+msgstr "Maven"
 
 #. type: delimited block -
 #: upstream/_guides/getting-started-testing.adoc:72
@@ -147,7 +147,7 @@ msgstr ""
 #: upstream/_guides/getting-started-testing.adoc:75
 #, no-wrap
 msgid "Gradle"
-msgstr ""
+msgstr "Gradle"
 
 #. type: delimited block -
 #: upstream/_guides/getting-started-testing.adoc:83
