--- a/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1177,7 +1177,7 @@ msgstr "Hibernate Searchエクステンションの設定については、 link
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:583
 #, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:588
