--- a/l10n/po/ja_JP/_guides/resteasy-reactive-migration.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive-migration.adoc.po
@@ -72,7 +72,7 @@ msgstr ""
 #: upstream/_guides/resteasy-reactive-migration.adoc:119
 #, no-wrap
 msgid "RESTEasy Reactive"
-msgstr ""
+msgstr "RESTEasy Reactive"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:26
@@ -143,7 +143,7 @@ msgstr ""
 #: upstream/_guides/resteasy-reactive-migration.adoc:44
 #, no-wrap
 msgid "Annotations"
-msgstr ""
+msgstr "アノテーション"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive-migration.adoc:47
@@ -159,7 +159,7 @@ msgstr ""
 #: upstream/_guides/resteasy-reactive-migration.adoc:53
 #, no-wrap
 msgid "Comments"
-msgstr ""
+msgstr "Comments"
 
 #. type: Table
 #: upstream/_guides/resteasy-reactive-migration.adoc:54
