--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc:16
@@ -63,7 +63,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc:107
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc:25
@@ -107,7 +107,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc:116
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-kubernetes-config-group-security-context-config-windows-options.adoc:52
