--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-openshift-openshift-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-openshift-openshift-config.adoc.po
@@ -1114,7 +1114,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-openshift-openshift-config.adoc:590
 #, no-wrap
 msgid "long"
-msgstr ""
+msgstr "long"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-openshift-openshift-config.adoc:562
