--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-qute-qute-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-qute-qute-runtime-config.adoc.po
@@ -116,7 +116,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-qute-qute-runtime-config.adoc:47
 #, no-wrap
 msgid "long"
-msgstr ""
+msgstr "long"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-qute-qute-runtime-config.adoc:50
