--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-graphql-client-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-graphql-client-general-config-items.adoc.po
@@ -124,7 +124,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-smallrye-graphql-client-general-config-items.adoc:44
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-smallrye-graphql-client-general-config-items.adoc:52
