--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-health-small-rye-health-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-health-small-rye-health-runtime-config.adoc.po
@@ -98,4 +98,4 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-smallrye-health-small-rye-health-runtime-config.adoc:37
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
