--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-stork-stork-load-balancer-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-stork-stork-load-balancer-configuration.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-stork-stork-load-balancer-configuration.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-stork-stork-load-balancer-configuration.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-stork-stork-load-balancer-configuration.adoc:16
@@ -55,7 +55,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-stork-stork-load-balancer-configuration.adoc:17
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-stork-stork-load-balancer-configuration.adoc:20
